--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Evon</title>
         <link rel="shortcut icon" href="assets/evon.png" type="image/x-icon" />
-        <meta name="description" content="">
+        <meta name="description" content="Evon a Fun & Moderation Bot">
+        <meta name="theme-color" content="#26ffff">
+        <meta name="twitter:card" content="assets/evon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
