--- a/pages/about.html
+++ b/pages/about.html
@@ -5,14 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Evon</title>
         <link rel="shortcut icon" href="css/assets/favicon.png" type="image/x-icon" />
-        <meta name="description" content="">
+        <meta name="description" content="About Evon">
+        <meta name="theme-color" content="#26ffff">
+        <meta name="twitter:card" content="Css/assets/favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Css/creators.css">
     </head>
     <body>
         <div class="navbar">
             <ul class="navul">
-                <li class="navli"><a href="https://nixonxc.github.io/evon2" id="active">HOME</a></li>
+                <li class="navli"><a href="https://evonbot.tk" id="active">HOME</a></li>
                 <li class="navli"><a href="https://discord.com/invite/hvVHaeu4n9">Support</a></li>
                 <li class="navli"><a href="about.html">About</a></li>
                 <li class="navli"><a href="https://discord.com/oauth2/authorize?client_id=883313942435352606&permissions=2617634038&scope=bot%20applications.commands">INVITE</a></li>
@@ -22,6 +24,7 @@
             <h1 class="maintext">About Evon</h1>
             <div class="centered">
                 <h2>Evon a moderation & fun bot</h2>
+                <p>Evon the better discord bot. Created by Vaibhav#9662 is a moderation and fun based discord bot that can keep a nice environment in your server. Keep's you safe from bad guys who write banned words, it will also show you some meme, and if you are not impressed by seeing memes you can create 1 for yourself. Evon eventually had Music but youtube forced every music bot creator to shut it down. If you have any problem with Evon or you've found some bug click here(hyperlink se support server ka link dal dena) to go to support server. Just invite it once it you don't like it you have always the option to kick it.</p>
               </div>
         </div>
         <script src="script.js" async defer></script>
