--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="shortcut icon" href="assets/evon.png" type="image/x-icon" />
         <meta name="description" content="Evon a Fun & Moderation Bot">
         <meta name="theme-color" content="#26ffff">
-        <meta name="twitter:card" content="https://media.discordapp.net/attachments/813079425029242910/889137649892352050/evon_over-removebg-preview.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:image" content="https://media.discordapp.net/attachments/813079425029242910/889137649892352050/evon_over-removebg-preview.png" />
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
