--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Evon a Fun & Moderation Bot">
         <meta name="theme-color" content="#26ffff">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:image" content="https://media.discordapp.net/attachments/813079425029242910/889137260950323230/favicon.png" />
+        <meta name="twitter:image" content="https://media.discordapp.net/attachments/813079425029242910/889137260950323230/favicon.png">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
