--- a/pages/about.html
+++ b/pages/about.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Evon</title>
-        <link rel="shortcut icon" href="https://media.discordapp.net/attachments/813079425029242910/889137649892352050/evon_over-removebg-preview.png" type="image/x-icon" />
+        <title>About Evon</title>
+        <link rel="shortcut icon" href="Css/assets/favicon.png" type="image/x-icon" />
         <meta name="description" content="About Evon">
         <meta name="theme-color" content="#26ffff">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,19 +14,19 @@
     <body>
         <div class="navbar">
             <ul class="navul">
-                <li class="navli"><a href="https://evonbot.tk" id="active">Home</a></li>
+                <li class="navli"><a href="https://evonbot.tk/" id="active">Home</a></li>
                 <li class="navli"><a href="https://discord.com/invite/hvVHaeu4n9">Support</a></li>
                 <li class="navli"><a href="about.html">About</a></li>
                 <li class="navli"><a href="https://discord.com/oauth2/authorize?client_id=883313942435352606&permissions=2617634038&scope=bot%20applications.commands">Invite</a></li>
             </ul>
         </div>
         <div class="main">
-            <h1 class="maintext">About Evon</h1>
-            <div class="centered">
-                <h2>Evon a moderation & fun bot</h2>
-                <p>Evon the better discord bot. Created by Vaibhav#9662 is a moderation and fun based discord bot that can keep a nice environment in your server. Keep's you safe from bad guys who write banned words, it will also show you some meme, and if you are not impressed by seeing memes you can create 1 for yourself. Evon eventually had Music but youtube forced every music bot creator to shut it down. If you have any problem with Evon or you've found some bug <a href="https://discord.com/invite/hvVHaeu4n9">Click Here</a> to go to support server. Just invite it once it you don't like it you have always the option to kick it.</p>
-              </div>
+            <h1>About Evon</h1>
+            <p>ㅤ</p>
+            <h2>Evon a moderation & fun bot</h2>
+            <p>Evon is a Fun Utlity & Moderation based bot made by Vaibhav#9662<br>Evon can keep a nice environment in your serverfound some bug Click Here to go to support server.<br> Just invite it once it you don't like it you have always the option to kick it.</p>
+
         </div>
-        <script src="script.js" async defer></script>
+        <script src="" async defer></script>
     </body>
 </html>
