--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,7 @@
             <h1>About Evon</h1>
             <p>ㅤ</p>
             <h2>Evon a moderation & fun bot</h2>
-            <p>Evon is a Fun Utlity & Moderation based bot made by Vaibhav#9662<br>Evon can keep a nice environment in your server with top notch moderation features.<br> Found some bugs? <a href="Link Here" style="color: white;"><b>Click Here</b></a> to go to the support server.<br> Just invite it once it you don't like it you have always the option to kick it.</p>
+            <p>Evon is a Fun Utlity & Moderation based bot made by Vaibhav#9662<br>Evon can keep a nice environment in your server with top notch moderation features.<br> Found some bugs? <a href="https://discord.gg/vMGZSHrTQw" style="color: white;"><b>Click Here</b></a> to go to the support server.<br> Just invite it once it you don't like it you have always the option to kick it.</p>
 
         </div>
         <script src="" async defer></script>
