--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="navbar">
             <ul class="navul">
                 <li class="navli"><a href="index.html" id="active">Home</a></li>
+                <li class="navli"><a href="commands.html">Commands</a></li>
                 <li class="navli"><a href="https://discord.com/invite/hvVHaeu4n9">Support</a></li>
                 <li class="navli"><a href="pages/about.html">About</a></li>
                 <li class="navli"><a href="https://discord.com/oauth2/authorize?client_id=883313942435352606&permissions=2617634038&scope=bot%20applications.commands">Invite</a></li>
