--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>About Evon</title>
         <link rel="shortcut icon" href="Css/assets/favicon.png" type="image/x-icon" />
-        <meta name="description" content="Evon a Fun & Moderation Bot">
+        <meta name="description" content="About Evon">
         <meta name="theme-color" content="#26ffff">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="twitter:image" content="https://media.discordapp.net/attachments/813079425029242910/889137260950323230/favicon.png">
@@ -14,7 +14,8 @@
     <body>
         <div class="navbar">
             <ul class="navul">
-                <li class="navli"><a href="https://evonbot.tk/" id="active">Home</a></li>
+                <li class="navli"><a href="https://nestro.cf" id="active">Home</a></li>
+                <li class="navli"><a href="https://nestro.cf/commands.html">Commands</a></li>
                 <li class="navli"><a href="https://discord.com/invite/hvVHaeu4n9">Support</a></li>
                 <li class="navli"><a href="about.html">About</a></li>
                 <li class="navli"><a href="https://discord.com/oauth2/authorize?client_id=883313942435352606&permissions=2617634038&scope=bot%20applications.commands">Invite</a></li>
@@ -24,7 +25,7 @@
             <h1>About Evon</h1>
             <p>ㅤ</p>
             <h2>Evon a moderation & fun bot</h2>
-            <p>Evon is a Fun Utlity & Moderation based bot made by Vaibhav#9662<br>Evon can keep a nice environment in your server with top notch moderation features.<br> Found some bugs? <a href="https://discord.gg/vMGZSHrTQw" style="color: white;"><b>Click Here</b></a> to go to the support server.<br> Just invite it once it you don't like it you have always the option to kick it.</p>
+            <p>Evon is a Fun Utlity & Moderation based bot made by Vaibhav#9662<br>Evon can keep a nice environment in your server with top notch moderation features.<br> Found some bugs? <a href="Link Here" style="color: white;"><b>Click Here</b></a> to go to the support server.<br> Just invite it once it you don't like it you have always the option to kick it.</p>
 
         </div>
         <script src="" async defer></script>
