--- a/pages/about.html
+++ b/pages/about.html
@@ -14,8 +14,8 @@
     <body>
         <div class="navbar">
             <ul class="navul">
-                <li class="navli"><a href="https://nestro.cf" id="active">Home</a></li>
-                <li class="navli"><a href="https://nestro.cf/commands.html">Commands</a></li>
+                <li class="navli"><a href="https://evonbot.tk/" id="active">Home</a></li>
+                <li class="navli"><a href="https://evonbot.tk/commands.html">Commands</a></li>
                 <li class="navli"><a href="https://discord.com/invite/hvVHaeu4n9">Support</a></li>
                 <li class="navli"><a href="about.html">About</a></li>
                 <li class="navli"><a href="https://discord.com/oauth2/authorize?client_id=883313942435352606&permissions=2617634038&scope=bot%20applications.commands">Invite</a></li>
