--- a/commands.html
+++ b/commands.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <title>Evon Commands</title>
 <meta name="theme-color" content="#26ffff">
-<meta name="description" content="Evon Commands">
+<meta name="description" content="Evon a Fun & Moderation Bot">
 <link rel="icon" type="image/jpeg" sizes="180x180" href="assets/evon.png">
 <meta name="twitter:image" content="https://media.discordapp.net/attachments/813079425029242910/892062424612626462/evon.png">
 <link rel="stylesheet" href="2/bootstrap/css/bootstrap.min.css">
